# Model-template

infrastructure/: Pulumi.yaml  __main__.py
model-template/: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
model-template/docs/: Makefile  conf.py  index.rst  make.bat
model-template/src/models/: train_model.py
model-template/src/models/mlruns/0/: meta.yaml
model-template/src/models/mlruns/0/e798de7dca9e4477ab286f511a72f824/: meta.yaml
model-template/src/models/mlruns/0/e798de7dca9e4477ab286f511a72f824/artifacts/model/: MLmodel  conda.yaml  model.pkl  python_env.yaml
model-template/src/models/mlruns/0/e798de7dca9e4477ab286f511a72f824/metrics/: accuracy  training_log_loss  training_roc_auc_score  training_score
model-template/src/models/mlruns/0/e798de7dca9e4477ab286f511a72f824/tags/: mlflow.log-model.history
