[tool.poetry]
name = "model-template"
version = "0.1.0"
description = ""
authors = ["mahdizn <lmahdizouine@gmail.com>"]
readme = "README.md"
packages = [{include = "model_template"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"
mlflow = "^2.0.1"
matplotlib = "^3.6.2"
scikit-learn = "^1.1.3"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"
dvc = "^2.34.3"
pytest = "^7.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
